[package]
name = "gmod-bad-apple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
bitstream-io = "2.2.0"
clap = { version = "4.4.18", features = ["derive"] }
image = "0.24.8"
zip = { version = "0.6.6", features = ["deflate"] }
